--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
       <input type="number" id="desplazamiento" size="4">
 
     <div>        
-      <button type="button" id="cifrar">Cifrar</button>
-      <button type="button" id="descifrar">Descifrar</button>
+      <button type="button" id="Cifrar">Cifrar</button>
+      <button type="button" id="Descifrar">Descifrar</button>
     </div> 
 
     <div>
